--- a/client/styles.css
+++ b/client/styles.css
@@ -1,20 +1,44 @@
 body{
     font-family : 'PT Serif', sans-serif;
     background-color : #222222;
+    color : white;
 }
 
+.navbar{
+
+    padding-top : 2.5%;
+}
 .navbar-brand{
     font-size : 1.8rem;
     font-weight : 700;
     
 }
 
-.nav-link{
-
-    padding-bottom : 0;
+.logout{
+    margin-right : 2%;
+   
+    margin-bottom : 0;
 }
 
 .nav-link:hover{
     
     text-decoration : underline;
+}
+
+.recommendations{
+    background: rgba( 22, 21, 21, 0.25 );
+
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+
+padding:5%;
+}
+
+.headline-img{
+ 
+    width: 100%;
+    height: 8vw;
+    object-fit: cover;
 }
