--- a/client/styles.css
+++ b/client/styles.css
@@ -25,6 +25,7 @@ input[type=checkbox]{
 label{
     padding : 1.2%;
     margin-right: 3%;
+    margin-top: 5%;
     border : 1px solid gray;
     border-radius: 10px;
 }
