--- a/server/templates/feed.html
+++ b/server/templates/feed.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href=" {{ url_for('static' ,filename='styles.css') }}">
 </head>
 <body>
 
@@ -133,7 +133,7 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
                 </div>
                <div class="col-md-4">
-                <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+                <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
                </div> 
                 <hr class="mt-3">
                </div>
@@ -144,7 +144,7 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
                 </div>
                <div class="col-md-4">
-                <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+                <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
                </div> 
                 <hr class="mt-3">
                </div>
@@ -154,7 +154,7 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
                 </div>
                <div class="col-md-4">
-                <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+                <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
                </div> 
                 <hr class="mt-3">
                </div>
@@ -164,7 +164,7 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
                 </div>
                <div class="col-md-4">
-                <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+                <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
                </div> 
                 <hr class="mt-3">
                </div>
@@ -174,7 +174,7 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
                 </div>
                <div class="col-md-4">
-                <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+                <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
                </div> 
                 <hr class="mt-3">
                </div>
@@ -194,7 +194,7 @@
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
                     </div>
                    <div class="col-md-4">
-                    <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+                    <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
                    </div> 
                     <hr class="mt-3">
 
@@ -202,7 +202,7 @@
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
                     </div>
                    <div class="col-md-4">
-                    <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+                    <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
                    </div> 
                     <hr class="mt-3">
 
@@ -220,7 +220,7 @@
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
                     </div>
                    <div class="col-md-4">
-                    <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+                    <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
                    </div> 
                     <hr class="mt-3">
 
@@ -228,7 +228,7 @@
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
                     </div>
                    <div class="col-md-4">
-                    <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+                    <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
                    </div> 
                     <hr class="mt-3">
 
@@ -256,7 +256,7 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
                 </div>
                <div class="col-md-4">
-                <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+                <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
                </div> 
                 <hr class="mt-3">
         </div>
@@ -266,7 +266,7 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
             </div>
            <div class="col-md-4">
-            <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+            <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
            </div> 
             <hr class="mt-3">
     </div>
@@ -276,7 +276,7 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
         </div>
        <div class="col-md-4">
-        <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+        <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
        </div> 
         <hr class="mt-3">
 </div>
@@ -289,7 +289,7 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
             </div>
            <div class="col-md-4">
-            <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+            <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
            </div> 
             <hr class="mt-3">
     </div>
@@ -299,7 +299,7 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
         </div>
        <div class="col-md-4">
-        <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+        <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
        </div> 
         <hr class="mt-3">
 </div>
@@ -309,7 +309,7 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
     </div>
    <div class="col-md-4">
-    <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+    <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
    </div> 
     <hr class="mt-3">
 </div>
@@ -322,7 +322,7 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
         </div>
        <div class="col-md-4">
-        <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+        <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
        </div> 
         <hr class="mt-3">
 </div>
@@ -332,7 +332,7 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
     </div>
    <div class="col-md-4">
-    <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+    <img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
    </div> 
     <hr class="mt-3">
 </div>
@@ -342,7 +342,7 @@
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
 </div>
 <div class="col-md-4">
-<img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+<img src="{{ url_for('static' , filename = './Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg' ) }}" alt="" class=" headline-img">
 </div> 
 <hr class="mt-3">
 </div>
