--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,18 +20,16 @@
     </h1>
 
    <div class="container">
+   
+       <form action="POST" class="text-center login-form mt-5 card-section">
+        <h3 class="text-center"> Sign Up</h3> <br>
+        {{form.email_address(class="form-control", placeholder="Email Address") }} <br> <br>
 
-    <form action="./feed.html" class="text-center login-form mt-5 card-section">
-        <h3 class="text-center">Login</h3> <br>
-       
-            <input type="email" name="email" class="form-control" placeholder="Email Address"> <br> <br>
-       
-        
-      
-        <input type="password" name="password" id="" class="form-control" placeholder="Password"> <br> <br>
+        {{form.password1(class="form-control", placeholder="Enter Password")}} <br> <br>
+        {{form.password2(class="form-control", placeholder="Confirm Password")}} <br> <br>
 
-        <button type="submit" class="btn btn-outline-light">Login</button>
-    </form>
+        {{form.submit(class="btn btn-outline-light")}}
+       </form>
    </div>
     
 </body>
