--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
 
    <div class="container">
 
-    <form action="./feed.html" class="text-center login-form mt-5 card-section">
+    <form action="" class="text-center login-form mt-5 card-section">
         <h3 class="text-center">Login</h3> <br>
        
             <input type="email" name="email" class="form-control" placeholder="Email Address"> <br> <br>
