--- a/templates/register.html
+++ b/templates/register.html
@@ -14,14 +14,32 @@
     <link rel="stylesheet" href="{{ url_for('static' ,filename='styles.css') }}">
 </head>
 <body>
-
+    {% with messages = get_flashed_messages(with_categories=True) %}
+    {% if messages %}
+     
+    {% for message in messages %}
+     
+    <div class="alert alert-danger alert-dismissible fade show container text-center"  role="alert" >
+     {{ message[1][0] }}
+     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+   </div>
+   </div>
+       
+   
+    {% endfor %}
+ 
+    {% endif %}
+    {% endwith %}
+ 
     <h1 class="heading text-center">
         Bulletin Feed
     </h1>
+  
 
    <div class="container">
    
-       <form action="POST" class="text-center login-form mt-5 card-section">
+       <form method="POST" class="text-center login-form mt-5 card-section">
+        {{form.hidden_tag()}}
         <h3 class="text-center"> Sign Up</h3> <br>
         {{form.email_address(class="form-control", placeholder="Email Address") }} <br> <br>
 
@@ -32,5 +50,10 @@
        </form>
    </div>
     
+
+
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
