--- a/templates/feed.html
+++ b/templates/feed.html
@@ -110,7 +110,7 @@
         <div class="navbar-nav ms-auto logout">
             
             <a class="nav-link px-5" aria-current="page" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Settings</a>
-          <a class="nav-link" aria-current="page" href="#">Logout</a>
+          <a class="nav-link" aria-current="page" href="{{ url_for('logout')}}">Logout</a>
         </div>
       </div>
       
